// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentCard StudentCard component should match the snapshot when the student has all times available 1`] = `
<section
  className="StudentCard"
>
  <div
    className="StudentCard--div--cols"
  >
    <h3>
      Hillary
    </h3>
    <img
      alt="Hillary"
      src="http://www.image.com/hill.jpeg"
    />
    <p
      className="StudentCard-pronouns"
    >
      Pronouns: 
      she/her
    </p>
    <p
      className="StudentCard-skills"
    >
      Skills: 
      react
       & 
      redux
    </p>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="morning"
        onClick={[Function]}
      >
        Book It
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="lunch"
        onClick={[Function]}
      >
        Book It
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:00 - 4:50 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="afternoon"
        onClick={[Function]}
      >
        Book It
      </button>
    </div>
  </div>
</section>
`;

exports[`StudentCard StudentCard component should match the snapshot when the student has no available times 1`] = `
<section
  className="StudentCard"
>
  <div
    className="StudentCard--div--cols"
  >
    <h3>
      Hillary
    </h3>
    <img
      alt="Hillary"
      src="http://www.image.com/hill.jpeg"
    />
    <p
      className="StudentCard-pronouns"
    >
      Pronouns: 
      she/her
    </p>
    <p
      className="StudentCard-skills"
    >
      Skills: 
      react
       & 
      redux
    </p>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:00 - 4:50 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
  </div>
</section>
`;

exports[`StudentCard StudentCard component should match the snapshot when the student has some times available 1`] = `
<section
  className="StudentCard"
>
  <div
    className="StudentCard--div--cols"
  >
    <h3>
      Hillary
    </h3>
    <img
      alt="Hillary"
      src="http://www.image.com/hill.jpeg"
    />
    <p
      className="StudentCard-pronouns"
    >
      Pronouns: 
      she/her
    </p>
    <p
      className="StudentCard-skills"
    >
      Skills: 
      react
       & 
      redux
    </p>
  </div>
  <div
    className="StudentCard--div--rows"
  >
    <div>
      <p
        className="StudentCard-time-text"
      >
        8:00 - 8:50 a.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        12:00 - 12:50 p.m.
      </p>
      <button
        className="StudentCard--btn"
        disabled={false}
        id="lunch"
        onClick={[Function]}
      >
        Book It
      </button>
    </div>
    <div>
      <p
        className="StudentCard-time-text"
      >
        4:00 - 4:50 p.m.
      </p>
      <p>
        NOT AVAILABLE
      </p>
    </div>
  </div>
</section>
`;
